--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 season = 18/19
-curr_gameweek = 17
+curr_gameweek = 19
 
 
 # name: name_last | name_first`_`name_last
 [owned]
-G = Hennessey, Fabianski, 
-D = Alexander-Arnold, M_Keane, Doherty, Wan-Bissaka, Chambers
-M = Sterling, Son, Felipe Anderson, Richarlison, Fraser
-F = Kane, Aubameyang, Wilson
+G = Fabianski, Hart, 
+D = Kolasinac, M_Keane, Doherty, Wan-Bissaka, Chambers, 
+M = Sterling, Son, Felipe Anderson, Martial, Richarlison, 
+F = Kane, Aubameyang, Ings, 
 
 
 [sell]
@@ -18,16 +18,17 @@ F =
 
 
 [monit]
-G = Ederson, Kepa, Lloris, 
-D = Laporte, Kolasinac, Schindler, 
-M = Mané, Sané, Alli, Snodgrass, 
-F = Mitrovic, Chicharito, Jiménez, 
+G = Ederson, Lloris, 
+D = Alonso, Robertson, Laporte, David Luiz, B_Davies, Lovren, 
+M = Hazard, Sané, Pogba, Lingard, Pedro, Pereyra, 
+F = Rashford, Mitrovic, Chicharito, Jiménez, Kamara, 
 
 
 # [team_watershed] ?
 # 18/19
 # FUL = 13; Jokanovic -> Ranieri
-# SOU = 15; Hughes -> Hassenhuttl
+# SOU = 15; Hughes -> Hasenhuttl
+# MUN = 18; Mourinho -> Solskjaer
 
 # 17/18
 # CRY = 9
