--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 season = 18/19
-curr_gameweek = 19
+curr_gameweek = 30
 
 
 # name: name_last | name_first`_`name_last
 [owned]
-G = Fabianski, Hart, 
-D = Kolasinac, M_Keane, Doherty, Wan-Bissaka, Chambers, 
-M = Sterling, Son, Felipe Anderson, Martial, Richarlison, 
-F = Kane, Aubameyang, Ings, 
+G = Fabianski, Etheridge, 
+D = Doherty, R_Pereira, Alexander-Arnold, Wan-Bissaka, Bednarek, 
+M = Salah, Son, Pogba, Maddison, Richarlison, 
+F = Higuaín, Rashford, Jiménez, 
 
 
 [sell]
@@ -18,10 +18,10 @@ F =
 
 
 [monit]
-G = Ederson, Lloris, 
-D = Alonso, Robertson, Laporte, David Luiz, B_Davies, Lovren, 
-M = Hazard, Sané, Pogba, Lingard, Pedro, Pereyra, 
-F = Rashford, Mitrovic, Chicharito, Jiménez, Kamara, 
+G = Guaita, 
+D = Robertson, van Dijk, Alonso, David Luiz, Duffy, Schär, 
+M = Sterling, Mané, Felipe Anderson, Pedro, Barnes, Brooks, 
+F = Vardy, Murray, Rondón, 
 
 
 # [team_watershed] ?
@@ -29,6 +29,9 @@ F = Rashford, Mitrovic, Chicharito, Jiménez, Kamara,
 # FUL = 13; Jokanovic -> Ranieri
 # SOU = 15; Hughes -> Hasenhuttl
 # MUN = 18; Mourinho -> Solskjaer
+# HUD = 23; Wagner -> Siewert
+# LEI = 28; Puel -> .. -> Rodgers
+# FUL = 29; Ranieri -> Parker
 
 # 17/18
 # CRY = 9
